# resolution-switcher

./: .gitignore  Cargo.toml  README.md  build.ps1  package-lock.json  package.json
crates/resolution-core/: Cargo.toml
crates/resolution-core/src/: config.rs  display.rs  lib.rs
crates/toggle/: Cargo.toml  build.rs
crates/toggle/src/: jumplist.rs  main.rs
frontend/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
