[package]
name = "resolution-switcher-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ico = "0.3"

[dependencies]
tauri = { version = "2", features = ["image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resolution-core = { path = "../crates/resolution-core" }
